Upgrade to JavaFX 24