@@ -9,7 +9,7 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <junit.version>5.13.3</junit.version>
-        <javafx.version>21.0.2</javafx.version>
+        <javafx.version>24.0.1</javafx.version>
     </properties>
 
     <scm>
@@ -87,6 +87,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>se.dykstrom.standup/se.dykstrom.standup.StandUp</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                     <executable>${java.home}/bin/java</executable>
                     <jlinkExecutable>${java.home}/bin/jlink</jlinkExecutable>
                     <stripDebug>true</stripDebug>
